--- a/app/src/main/res/layout/activity__login_up.xml
+++ b/app/src/main/res/layout/activity__login_up.xml
@@ -1,27 +1,104 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <ImageView
-        android:layout_width="32dp"
-        android:layout_height="32dp"
-        android:layout_marginBottom="4dp"
-        android:layout_alignParentBottom="true"
-        android:src="@drawable/ic_baseline_person_outline_24"/>
-
+    <TextView
+        android:layout_marginTop="60dp"
+        android:id="@+id/reg_number1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:padding="10dp"
+        android:text="账号:"
+        android:textColor="#000"
+        android:textSize="20dp" />
     <EditText
-        android:id="@+id/et_user"
+        android:layout_alignBottom="@+id/reg_number1"
+        android:layout_toRightOf="@+id/reg_number1"
+        android:id="@+id/reg_username"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="4dp"
-        android:layout_alignParentBottom="true"
-        android:layout_gravity="center"
-        android:inputType="text"
-        android:hint="用户名"
-        android:layout_marginStart="48dp"
-        android:layout_marginEnd="48dp"
-        android:maxLines="1"/>
-</LinearLayout>
+        android:padding="10dp" />
+    <TextView
+        android:id="@+id/reg_number2"
+        android:layout_marginTop="5dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/reg_number1"
+        android:padding="10dp"
+        android:text="密码:"
+        android:textColor="#000"
+        android:textSize="20dp" />
+    <EditText
+        android:layout_alignBottom="@id/reg_number2"
+        android:layout_toRightOf="@+id/reg_number2"
+        android:id="@+id/reg_password"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="10dp" />
+    <TextView
+        android:id="@+id/reg_number3"
+        android:layout_marginTop="5dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/reg_number2"
+        android:padding="10dp"
+        android:text="确认密码:"
+        android:textColor="#000"
+        android:textSize="20dp" />
+    <EditText
+        android:layout_alignBottom="@id/reg_number3"
+        android:layout_toRightOf="@+id/reg_number3"
+        android:id="@+id/reg_password2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="10dp" />
+    <TextView
+        android:id="@+id/reg_number4"
+        android:layout_marginTop="5dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/reg_number3"
+        android:padding="10dp"
+        android:text="手机:"
+        android:textColor="#000"
+        android:textSize="20dp" />
+    <EditText
+        android:layout_alignBottom="@id/reg_number4"
+        android:layout_toRightOf="@+id/reg_number4"
+        android:id="@+id/reg_phone"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="10dp" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="确定注册"
+        android:background="#74e674"
+        android:id="@+id/reg_btn_sure"
+        android:layout_marginTop="38dp"
+        android:layout_below="@+id/reg_phone"
+        android:layout_marginLeft="50dp" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="返回登录"
+        android:background="#f27758"
+        android:id="@+id/reg_btn_login"
+        android:layout_alignBottom="@id/reg_btn_sure"
+        android:layout_toRightOf="@id/reg_btn_sure"
+        android:layout_marginLeft="60dp"
+        />
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="账号注册"
+        android:textSize="30dp"
+        android:layout_marginTop="5dp"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+</RelativeLayout>
